<resources>
    <string name="app_name">ChapterEnam</string>
    <string name="change">Change</string>
    <string name="nama">Nama</string>
    <string name="tahun">Tahun</string>
    <string name="hitung">Hitung</string>
    <string name="berat_badan">Berat Badan (kg)</string>
    <string name="tinggi_badan">Tinggi Badan (cm)</string>
    <string name="hitung_thread">Hitung(Thread)</string>
    <string name="hitung_thread_dan_handler">Hitung(Thread dan Handler)</string>
    <string name="thread">Thread :</string>
    <string name="thread_dan_handler">Thread dan Handler :</string>
    <string name="image">Image</string>
    <string name="judul_film">Judul Film</string>
    <string name="tanggal_film">Tanggal Film</string>
    <string name="nama_sutradara">Nama Sutradara</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="hitung_luas">Hitung Luas</string>
    <string name="nama_author">Nama Author</string>
    <string name="deskripsi_film">Deskripsi Film</string>
    <string name="capital">Capital</string>
    <string name="population">Population</string>
    <string name="region">Region</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="delete">Delete</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hello">Hello,</string>
    <string name="logout">Logout</string>
    <string name="ini_splash">Ini Splash</string>
</resources>